Fix z-index of media query debug display

--- a/unavia/src/scss/_header.scss
+++ b/unavia/src/scss/_header.scss
@@ -10,7 +10,8 @@
 	background-color: rgb(250, 250, 250);
 	border: 2px solid dodgerblue;
 	border-radius: 1000px;
-	opacity: 0.9;
+	opacity: 0.75;
+	z-index: 100;
 }
 
 header {
